--- a/action.yml
+++ b/action.yml
@@ -64,6 +64,19 @@ runs:
       if: steps.cached-poetry.outputs.cache-hit != 'true'
       uses: snok/install-poetry@v1
 
+    - name: Load cached venv
+      id: cached-poetry-dependencies
+      if: inputs.venv-cache
+      uses: actions/cache@v3
+      with:
+        path: .venv
+        key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
+
+
+    - name: Install dependencies
+      if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+      run: poetry install --no-interaction --no-root
+
 
 
     - run: echo "Running composite"
