--- a/action.yml
+++ b/action.yml
@@ -76,6 +76,7 @@ runs:
     - name: Install dependencies
       if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
       run: poetry install --no-interaction --no-root
+      shell: bash
 
 
 
