--- a/action.yml
+++ b/action.yml
@@ -66,7 +66,7 @@ runs:
 
     - name: Load cached venv
       id: cached-poetry-dependencies
-      if: inputs.venv-cache
+      if: inputs.venv-cache == 'true'
       uses: actions/cache@v3
       with:
         path: .venv
