--- a/action.yml
+++ b/action.yml
@@ -63,6 +63,10 @@ runs:
     - name: Install Poetry
       if: steps.cached-poetry.outputs.cache-hit != 'true'
       uses: snok/install-poetry@v1
+      with:
+        virtualenvs-create: true
+        virtualenvs-in-project: true
+        installer-parallel: true
 
     - name: Load cached venv
       id: cached-poetry-dependencies
