--- a/action.yml
+++ b/action.yml
@@ -36,11 +36,23 @@ inputs:
     required: false
     default: true
 
+  do-checkout:
+    description: |
+      Whether to do a checkout or not.
+
+      Type: bbool
+
+      Defaults to true.
+    required: false
+    default: true
+
 runs:
   using: "composite"
   steps:  
 
-    - uses: actions/checkout@v4
+    - name: Checkout
+      if: inputs.do-checkout == 'true'
+      uses: actions/checkout@v4
 
     - name: Set up python
       id: setup-python
